# rush

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs  testcli.rs  utility.rs
test/: example.txt
