[package]
name = "rush"
version = "0.1.0"
authors = ["jhaig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
exitfailure = "0.5.1"
rustyline = "5.0.4"
# indicatif for progress bars

# this sets build options for release builds; cargo build --release
[profile.release]
opt-level = 'z' #Optimize for size
lto = true # Link time Optimization (LTO) tells linker to optimize at link stage