[package]
name = "rush"
version = "0.1.0"
authors = ["jhaig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: rustyline is no longer supported
rustyline = "5.0.4"
linefeed = "0.6"
# indicatif for progress bars